# MVC

./: CMakeLists.txt  README  README.md  assignment4.html  gitcom.bat
MVC/: batch.cpp  batch.h  common.h  control.cpp  control.h  geometry.cpp  geometry.h  image.cpp  image.h  ip.cpp  ip.h  main.cpp  main.h  membrane.cpp  membrane.h  mvc.cpp  mvc.h  patch.cpp  patch.h  window.cpp  window.h
resources/: assignment4.html  elinson-final.tex
